Upgrading to NullAway 0.13.6 (#1151)
* Upgrading to NullAway 0.13.6.

* Empty iterator optimization.